--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@typechain/ethers-v6": "^0.5.0",
     "@typechain/hardhat": "^9.0.0",
     "chai": "^4.2.0",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.5",
     "ethers": "^6.4.0",
     "hardhat": "^2.14.0",
     "hardhat-deploy": "^0.11.43",
@@ -18,5 +18,8 @@
     "prettier-plugin-solidity": "^1.2.0",
     "solidity-coverage": "^0.8.0",
     "typechain": "^8.3.0"
+  },
+  "dependencies": {
+    "@klaytn/contracts": "^1.0.6"
   }
 }
